# RoboticsProject

./: .gitignore  .gitmodules  Doxyfile  README.md  params.py  ur5_generic.py
assignment_0/devel/: .catkin  setup.sh
assignment_0/devel/lib/pkgconfig/: main_controller.pc  ur5_controller.pc
assignment_0/install/: .rosinstall  local_setup.sh
assignment_0/install/lib/pkgconfig/: main_controller.pc
assignment_0/install/share/ur5_controller/: package.xml
assignment_0/src/kinematics_lib/: CMakeLists.txt
assignment_0/src/kinematics_lib/include/kinematics_lib/: kinematics_types.h  shelfino_kinematics.h  ur5_kinematics.h
assignment_0/src/kinematics_lib/src/: shelfino_trajectory.cpp  ur5_direct.cpp  ur5_inverse.cpp  ur5_motion_plan.cpp  ur5_rotation.cpp
assignment_0/src/main_controller/: CMakeLists.txt
assignment_0/src/shelfino_controller/: CMakeLists.txt  package.xml
assignment_0/src/shelfino_controller/include/shelfino_controller_lib/: shelfino_controller.h
assignment_0/src/shelfino_controller/src/: shelfino_controller_lib.cpp  shelfino_test.cpp
assignment_0/src/shelfino_gazebo/: CMakeLists.txt
assignment_0/src/ur5_controller/: CMakeLists.txt
assignment_0/src/ur5_controller/scripts/: homing_procedure.py  sin_movement.py
assignment_0/src/ur5_controller/src/: direct_kinematics_test.cpp  sin_movement.cpp
assignment_0/src/ur5_controller_lib/: CMakeLists.txt  package.xml
assignment_0/src/ur5_kinematics_lib/: CMakeLists.txt  package.xml
assignment_0/src/ur5_kinematics_lib/include/ur5_kinematics_lib/: ur5_kinematics.h
assignment_0/src/ur5_kinematics_lib/src/: ur5_inverse.cpp  ur5_motion_plan.cpp  ur5_rotation.cpp
assignment_0/src/ur5_test/: CMakeLists.txt  package.xml
assignment_0/src/view_camera_output/: CMakeLists.txt  package.xml
assignment_0/src/view_camera_output/launch/: camera.launch
assignment_0/src/view_camera_output/scripts/: view_camera_output.py
assignment_2/: test
assignment_2/src/gazebo_ros_link_attacher/: CMakeLists.txt  package.xml
assignment_2/src/kinematics_lib/: CMakeLists.txt  package.xml
assignment_2/src/main_controller/: CMakeLists.txt  package.xml
assignment_2/src/main_controller/include/main_controller/: fsm.h
assignment_2/src/main_controller/launch/: areas.yaml  main.launch  main_real.launch  main_sim.launch  rosconsole.conf  world
assignment_2/src/main_controller/src/: fsm_controller.cpp  fsm_states.cpp  fsm_states_ass_2.cpp  fsm_states_ur5_only.cpp  fsm_utils.cpp  states.cpp
assignment_2/src/shelfino_controller/: CMakeLists.txt
assignment_2/src/shelfino_controller/include/shelfino_controller/: shelfino_controller_lib.h
assignment_2/src/shelfino_controller/src/: shelfino_controller_lib.cpp  shelfino_controller_node.cpp  shelfino_test.cpp
assignment_2/src/shelfino_controller/srv/: MoveForward.srv  MoveTo.srv  PointTo.srv  Rotate.srv
assignment_2/src/ur5_controller/: CMakeLists.txt  package.xml
assignment_2/src/ur5_controller/include/ur5_controller/: ur5_controller_lib.h
assignment_2/src/ur5_controller/src/: ur5_controller_lib.cpp  ur5_controller_node.cpp  ur5_follow_path.cpp  ur5_movement_lib.cpp
assignment_2/src/ur5_controller/srv/: MoveTo.srv
assignment_2/src/yolov5_ros/: CMakeLists.txt  package.xml
assignment_2/src/yolov5_ros/launch/: yolov5.launch
assignment_2/src/yolov5_ros/msg/: BoundingBox.msg
assignment_2/src/yolov5_ros/scripts/: detect.py
assignment_2/src/yolov5_ros/src/: detect.py  vision_node.cpp
locosim/: base_controller.py  base_controller_fixed.py  params.py  ur5_generic.py
locosim/lego/: lego.sdf  model.config
locosim/models/X1-Y1-Z2/: X1-Y1-Z2.config  X1-Y1-Z2.sdf
locosim/models/X1-Y2-Z1/: X1-Y2-Z1.config  X1-Y2-Z1.sdf
locosim/models/X1-Y2-Z2/: X1-Y2-Z2.config  X1-Y2-Z2.sdf
locosim/models/X1-Y2-Z2-CHAMFER/: X1-Y2-Z2-CHAMFER.config  X1-Y2-Z2-CHAMFER.sdf
locosim/models/X1-Y2-Z2-TWINFILLET/: X1-Y2-Z2-TWINFILLET.config  X1-Y2-Z2-TWINFILLET.sdf
locosim/models/X1-Y3-Z2/: X1-Y3-Z2.config  X1-Y3-Z2.sdf
locosim/models/X1-Y3-Z2-FILLET/: X1-Y3-Z2-FILLET.config  X1-Y3-Z2-FILLET.sdf
locosim/models/X1-Y4-Z1/: X1-Y4-Z1.config  X1-Y4-Z1.sdf
locosim/models/X1-Y4-Z2/: X1-Y4-Z2.config  X1-Y4-Z2.sdf
locosim/models/X2-Y2-Z2/: X2-Y2-Z2.config  X2-Y2-Z2.sdf
locosim/models/X2-Y2-Z2-FILLET/: X2-Y2-Z2-FILLET.config  X2-Y2-Z2-FILLET.sdf
locosim/models/basket/: basket.config  basket.sdf  basket.stl
locosim/models/lego/: lego.sdf
locosim/models/nad/: nad.config  nad.sdf  nad.stl
ros_ws/src/kinematics_lib/: CMakeLists.txt
ros_ws/src/main_controller/: CMakeLists.txt
ros_ws/src/main_controller/include/main_controller/: fsm.h
ros_ws/src/main_controller/launch/: areas.yaml  areas1.yaml  areas2.yaml  areas_lab.yaml  areas_test.yaml  main_real.launch  main_sim.launch  real.launch  rosconsole.conf  simulation.launch  video1_main_sim.launch  video2_main_sim.launch  video3_main_sim.launch
ros_ws/src/main_controller/src/: fsm_controller.cpp  fsm_states_ass_1.cpp  fsm_states_ass_2.cpp  fsm_states_ass_3.cpp  fsm_test.cpp  fsm_utils.cpp
ros_ws/src/robotic_vision/: CMakeLists.txt  package.xml
ros_ws/src/robotic_vision/include/robotic_vision/: shelfino_vision.h  ur5_vision.h
ros_ws/src/robotic_vision/launch/: shelfino_only.launch  yolov5.launch  yolov5_d435.launch  zed_only.launch
ros_ws/src/robotic_vision/msg/: BoundingBox.msg  BoundingBoxes.msg
ros_ws/src/robotic_vision/scripts/: detect.py
ros_ws/src/robotic_vision/scripts/yolov5/data/: megablocks.yaml
ros_ws/src/robotic_vision/src/: shelfino_yolo_node.cpp  ur5_yolo_node.cpp  vision_node.cpp
ros_ws/src/robotic_vision/srv/: Detect.srv  PointCloud.srv
ros_ws/src/shelfino_controller/: CMakeLists.txt  package.xml
ros_ws/src/shelfino_controller/include/shelfino_controller/: shelfino_controller_lib.h  shelfino_services.h
ros_ws/src/shelfino_controller/src/: shelfino_controller_lib.cpp  shelfino_controller_node.cpp  shelfino_stop.cpp  shelfino_test.cpp
ros_ws/src/shelfino_controller/srv/: MoveTo.srv  Rotate.srv
ros_ws/src/ur5_controller/: CMakeLists.txt
ros_ws/src/yolov5_ros/: CMakeLists.txt  package.xml
(+52 files in other folders)
