<?xml version="1.0"?>
<package format="2">
  <name>main_controller</name>
  <version>0.0.0</version>
  <description>The main_controller package</description>
  
  <maintainer email="sam@todo.todo">sam</maintainer>
  
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
