<?xml version="1.0"?>
<package format="2">
  <name>main_controller</name>
  <version>0.0.0</version>
  <description>The main_controller package</description>
  
  <maintainer email="sam@todo.todo">sam</maintainer>
  
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ur5_controller</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>ur5_controller</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ur5_controller</exec_depend>

  <export>

  </export>
</package>
